--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,9 @@ crashlytics-build.properties
 # Third Party Assets
 Assets/_Complete-Game/*
 !Assets/_Complete-Game/.keep
+Assets/TutorialInfo/*
+!Assets/TutorialInfo/.keep
+Assets/*.pdf
 
 # Build Leftovers
 connectwebgl.zip
